Saving a read-only file on windows : no warning and temporary files left there #22007

Closed
opened 2010-04-13 09:08:31 +02:00 by Yannick Duchêne · 3 comments

%%%Hi all,

This is a tiny bug, not a nasty one.

When saving a read-only file from Blender on Windows, the Blender UI does not shows in any way the file was not saved : no warning to the user and the little star in the title bar is removed, just like if the file was really saved. And in the directory of the read-only file, there remains two temporary files : the unpacked version of the Blend file which was to be saved and the gzipped version of the file which could not be saved.

Just for fun, in attachment is the original test read-only file and the two, unpacked and packed temporary files left in the place.

Have a nice day

Blender Alpha 2.5 Revision 28035 on Windows XP
%%%

%%%Hi all, This is a tiny bug, not a nasty one. When saving a read-only file from Blender on Windows, the Blender UI does not shows in any way the file was not saved : no warning to the user and the little star in the title bar is removed, just like if the file was really saved. And in the directory of the read-only file, there remains two temporary files : the unpacked version of the Blend file which was to be saved and the gzipped version of the file which could not be saved. Just for fun, in attachment is the original test read-only file and the two, unpacked and packed temporary files left in the place. Have a nice day Blender Alpha 2.5 Revision 28035 on Windows XP %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Hi Yannick,

thanks for reporting. The issue actually was the missing error message to the user.
What happens is that to be safe, before overwriting a file Blender creates the Teste.blend@ file (and the compressed version Teste.blend@.gz) and only if all writing has been successful the old file is overwritten. (the Teste.blend@ is renamed to Teste.blend).

Only the last step can'd be executed, so Blender actually writes the file as Teste.blend@

I have fixed the code, so now the corresponding error messages appear again.

Revision: 28197 and Revision: 28198

Closing report.
%%%

%%%Hi Yannick, thanks for reporting. The issue actually was the missing error message to the user. What happens is that to be safe, before overwriting a file Blender creates the Teste.blend@ file (and the compressed version Teste.blend@.gz) and only if all writing has been successful the old file is overwritten. (the Teste.blend@ is renamed to Teste.blend). Only the last step can'd be executed, so Blender actually writes the file as Teste.blend@ I have fixed the code, so now the corresponding error messages appear again. Revision: 28197 and Revision: 28198 Closing report. %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#22007
No description provided.