fix [#22007] Saving a read-only file on windows : no warning and temporary files left there * return OPERATOR_FINISHED from file save, so reports are not suppressed - this results in popup with the expected error in this case.